CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (lcpackgen)

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

SET (CMAKE_AUTOMOC ON)

FIND_PACKAGE (Qt5 COMPONENTS Widgets Xml XmlPatterns)

INCLUDE_DIRECTORIES (
	${CMAKE_CURRENT_BINARY_DIR}
	)

SET (SRCS
	main.cpp
	mainwindow.cpp
	)
SET (FORMS
	mainwindow.ui
	)

QT5_WRAP_UI (UIS_H ${FORMS})

ADD_EXECUTABLE (lcpackgen WIN32
	${SRCS}
	${UIS_H}
	)

TARGET_LINK_LIBRARIES (lcpackgen
	Qt5::Widgets
	Qt5::Xml
	Qt5::XmlPatterns
	)
INSTALL (TARGETS lcpackgen DESTINATION bin)
