CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
PROJECT (lcpackgen)

SET (CMAKE_CXX_STANDARD 11)
SET (CMAKE_CXX_STANDARD_REQUIRED True)

SET (CMAKE_AUTOMOC ON)

FIND_PACKAGE (Qt5 COMPONENTS Widgets Xml XmlPatterns)

INCLUDE_DIRECTORIES (
	${CMAKE_CURRENT_BINARY_DIR}
	)

SET (SRCS
	main.cpp
	mainwindow.cpp
	)
SET (FORMS
	mainwindow.ui
	)

QT5_WRAP_UI (UIS_H ${FORMS})

ADD_EXECUTABLE (lcpackgen WIN32
	${SRCS}
	${UIS_H}
	)

TARGET_LINK_LIBRARIES (lcpackgen
	Qt5::Widgets
	Qt5::Xml
	Qt5::XmlPatterns
	)
INSTALL (TARGETS lcpackgen DESTINATION bin)
